Disable requested 'select all' buttons. Fix float:right; overflow issue.

--- a/osoitepalvelu-ui/src/main/webapp/css/common.css
+++ b/osoitepalvelu-ui/src/main/webapp/css/common.css
@@ -67,6 +67,7 @@ color: initial;
     padding-right: 8px;
     padding-top: 4px;
     border-bottom: 1px solid black;
+    overflow: hidden;
 }
 
 li.select2-search-field {
